# cyber-controller

./: .gitignore  .gitmodules  LICENSE  README.md  SECURITY.md  build.py  pyproject.toml
.github/workflows/: build-release.yml
assets/: gen_logo.py
docs/: HARDWARE-FIRMWARE-MATRIX.md  NIGHT-SESSION-2026-06-12.md  SESSION-HISTORY.md
src/: app.py
src/config/: settings.py
src/config/profiles/: airtag_scanner.json  bruce.json  cyt_ng.json  esp32_div.json  flipper_momentum.json  flipper_unleashed.json  flock_you.json  ghost_esp.json  halehound.json  kali_arm.json  marauder.json  meshtastic.json  minigotchi.json  oui_spy.json  pwnagotchi.json  raspyjack.json  rayhunter.json  sky_spy.json
src/core/: action_resolver.py  backup.py  batch.py  broadcast.py  cross_comm.py  deadman_auth.py  device_detect.py  device_manager.py  firmware_vault.py  flash_core.py  flash_engine.py  health_monitor.py  macro_recorder.py  profile_loader.py  serial_handler.py  suicide_setup.py
src/core/backends/: adb_backend.py  sd_backend.py
src/models/: action.py  device.py  mission.py  target.py
src/protocols/: __init__.py  base.py  bruce.py  bw16.py  esp32_div.py  flipper.py  ghost_esp.py  halehound.py  marauder.py  meshtastic.py
src/security/: audit_trail.py  encrypted_storage.py  web_auth.py
src/ui/: launcher.py
src/ui/qt/: broadcast_tab.py  cross_comm_tab.py  device_tab.py  flash_tab.py  health_tab.py  macro_tab.py  main_window.py  settings_tab.py  suicide_dialog.py  targets_tab.py
src/ui/qt/theme/: __init__.py  colors.py  cyber_dark.qss
src/ui/qt/widgets/: __init__.py  arc_gauge.py  cc_icon.py  cc_logo.py  command_palette.py  signal_bars.py  toggle_switch.py
src/ui/tk/: app.py
src/ui/tui/: app.py  styles.tcss
src/ui/web/: app.py
src/ui/web/static/: style.css
src/ui/web/templates/: base.html  dashboard.html  devices.html  flash.html  targets.html  terminal.html
tests/: conftest.py  test_audit_hardening.py  test_broadcast.py  test_cross_comm.py  test_csp_nonce.py  test_encrypted_storage.py  test_firmware_pinning.py  test_flash_core.py  test_profile_loader.py  test_protocols.py  test_serial_handler.py  test_web_auth.py
